# nl2plsql_plfactory

./: README.md  expansion.py  expansion_main.py  pyproject.toml  seed_generation.py  seed_generation_main.py  translation.py  translation_main.py
agent/expansion/: alignment.py  correct.py  critical.py  ir_expansion.py  plsql_expansion.py  seed_selection.py
agent/seed_generation/: alignment.py  correct.py  critical.py  generation.py  ir_generation.py  table_selection.py
agent/translation/: translation_node.py
data/: oracle_function_docs.json  postgres_errors_doc.json  postgres_function_docs.json
datasets/test/: oracle_benchmark_procedure_test_sample.json  oracle_omni_function_test_sample.json  oracle_omni_procedure_test_sample.json  oracle_omni_trigger_test_sample.json  oracle_spider_function_test_sample.json  oracle_spider_procedure_test_sample.json  oracle_spider_trigger_test_sample.json  postgres_benchmark_procedure_test_sample.json  postgres_omni_function_test_sample.json  postgres_omni_procedure_test_sample.json  postgres_omni_trigger_test_sample.json  postgres_spider_function_test_sample.json  postgres_spider_procedure_test_sample.json  postgres_spider_trigger_test_sample.json
datasets/train/: rl_data_sample.json  sft_data_sample.json
experiments/codes/: eval_oracle.py  eval_postgres.py  oracle_nl2plsql.py  postgres_nl2plsql.py
experiments/utils/: llm_helper.py  (+3 more)
state/: expansion_state.py  seed_generation_state.py  translation_state.py
tool/: expansion_tool.py  seed_generation_tool.py
util/: llm_util.py  oracle_util.py  postgres_util.py
(+9 files in other folders)
