[project]
name = "plfactory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "dotenv>=0.9.9",
    "ipython>=9.6.0",
    "langchain<1.0",
    "langchain-community<1.0",
    "langchain-core<1.0",
    "langchain-deepseek>=0.1.4",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "oracledb>=3.4.0",
    "pandas>=2.3.3",
    "pglast>=7.8",
    "psycopg[binary]>=3.2.10",
    "pytest>=8.4.2",
    "sentence-transformers>=5.1.2",
    "sqlparse>=0.5.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]
